--- a/src/components/CSS/Header.css
+++ b/src/components/CSS/Header.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--header-bg);
   backdrop-filter: blur(8px);
   color: black;
   transition: all 0.3s ease;
